# sshws

./: AGENTS.md  Cargo.toml  README.md  install.sh  setup.sh  skills-lock.json  uninstall.sh  update.sh
.github/workflows/: release.yml
migrations/: 20260629000001_create_telegram_users.sql  20260629000002_create_messages.sql
src/: main.rs
