[package]
name = "sshws"
version = "1.0.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["full"] }
clap = { version = "4", features = ["derive"] }
teloxide = "0.17.0"
dotenvy = "0.15.7"
uuid = { version = "1.23.4", features = ["v4"] }
reqwest = { version = "0.13.4", features = ["json"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
chrono = "0.4.45"
