[package]
name = "sshws"
version = "1.0.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["full"] }
clap = { version = "4", features = ["derive"] }
teloxide = { version = "0.17.0", default-features = false, features = ["rustls", "macros", "ctrlc_handler"] }
dotenvy = "0.15.7"
uuid = { version = "1.23.4", features = ["v4"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
chrono = "0.4.45"
log = "0.4.33"
pretty_env_logger = "0.5.0"
base64 = "0.22.1"
